[documentation] Fixed ID types not showing up by adding explicit macros to the Doxyfile.

--- a/documentation/custom_dark_theme.css
+++ b/documentation/custom_dark_theme.css
@@ -207,6 +207,16 @@ dl.reflist {
 
 }
 
+dl.reflist dt {
+    background-color: #5f606d;
+}
+
+dl.reflist dd {
+    background-color: #4f4f4f;
+	border-color: #5f606d;
+	color: white;
+}
+
 
 /*********************************************/
 /**               Note, warning             **/
